[gd_scene load_steps=3 format=3 uid="uid://dgh0ovmttvlnj"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/Tool/TimelineItem/TransitionsModal/TransitionsModal.gd" id="1_pei7b"]
[ext_resource type="PackedScene" uid="uid://baplo5xewiulv" path="res://addons/DialogHelperTool/Shared/Modal/Modal.tscn" id="2_yuxmt"]

[node name="TransitionsModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pei7b")
popup_size = Vector2(0.8, 0.8)

[node name="Modal" parent="." node_paths=PackedStringArray("child") instance=ExtResource("2_yuxmt")]
layout_mode = 1
popup_size = Vector2(0.8, 0.8)
child = NodePath("Panel/MarginContainer/PanelContainer/TransitionItem")
background_color = Color(0.176471, 0.203922, 0.321569, 0.933333)
popup_time = 0.33
full_blur = 2.0

[connection signal="back_clicked" from="Modal" to="." method="close_window_no_data"]
[connection signal="was_hidden" from="Modal" to="." method="_on_modal_was_hidden"]
